--- a/src/components/molecules/chess-board/chess-board.scss
+++ b/src/components/molecules/chess-board/chess-board.scss
@@ -1,12 +1,12 @@
 .chess-board {
   height: 400px;
   display: grid;
-  grid-template-columns: repeat(8, 50px) 100px;
-  grid-template-rows: repeat(9, 50px);
+  grid-template-columns: repeat(9, 105px);
+  grid-template-rows: repeat(9, 105px);
 
   &__square {
-    width: 50px;
-    height: 50px;
+    width: 105px;
+    height: 105px;
     background-color: black;
     display: flex;
     justify-content: center;
@@ -26,6 +26,10 @@
 
     &--hidden {
       opacity: 0;
+    }
+
+    &--clicked {
+      border: 1px solid yellow;
     }
   }
 }
