--- a/src/components/molecules/chess-board/chess-board.scss
+++ b/src/components/molecules/chess-board/chess-board.scss
@@ -1,13 +1,13 @@
 .chess-board {
   height: 400px;
   display: grid;
-  grid-template-columns: repeat(9, 105px);
-  grid-template-rows: repeat(9, 105px);
+  grid-template-columns: repeat(8, 50px) 100px;
+  grid-template-rows: repeat(9, 50px);
 
   &__square {
-    width: 105px;
-    height: 105px;
-    background-color: black;
+    width: 50px;
+    height: 50px;
+    background-color: rgb(117, 73, 43);
     display: flex;
     justify-content: center;
     align-items: center;
