--- a/src/components/molecules/selector/selector.scss
+++ b/src/components/molecules/selector/selector.scss
@@ -34,4 +34,9 @@ $icon-width: 20px;
     color: inherit;
     background-color: $option;
   }
+  &__label {
+    font-size: 18px;
+    font-weight: 500;
+    align-self: flex-start;
+  }
 }
